# primedate

./: .gitignore  LICENSE  README.md  primedate.cabal  stack.yaml
app/: Main.hs
