name:                primedate
version:             0.1.0.1
synopsis:            Enumerate prime dates in specified year.
description:         Please see README.md
homepage:            http://github.com/nobsun/primedate#readme
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable primedate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time >= 1.5.0.1
                     , arithmoi >= 0.4.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nobsun/primedate
